# automata

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile_onfinality  Jenkinsfile  README.md  docker-compose.yml  rust-toolchain  rust-toolchain.yaml  start.sh
.github/workflows/: docker.yaml  docker_compose_ci.yaml  publish-dev-docker.yaml  publish-release-dockers.yaml  publish-release-runtime.yaml  rust.yaml
.jenkins/: AppDockerfile  BuilderDockerfile
.jenkins/automata-chart/: Chart.yaml  values.yaml
.jenkins/automata-chart/templates/: chain.yaml
.maintain/: docker-compose-dev.yml  docker-compose-local-build.yml  docker-compose-local.yml  docker-compose-staging-build.yml  docker-compose-staging.yml
assets/: chain_spec_testnet.json  chain_spec_testnet_raw.json
geode/builder/: Cargo.toml  README.md
geode/builder/edger8r/: CodeGen.ml  Edger8r.ml  Util.ml
geode/builder/examples/enclave-hello/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave.lds  build.rs
geode/builder/examples/enclave-hello/src/: lib.rs
geode/builder/examples/geode-hello/: Cargo.toml  build.rs
geode/builder/examples/geode-hello-unified/: Cargo.toml  build.rs
geode/builder/examples/geode-hello-unified/src/: main.rs
geode/builder/examples/geode-hello/src/: main.rs
geode/builder/src/: enclave.rs  geode.rs  intel.rs  lib.rs  teaclave.rs
geode/crypto/: Cargo.toml  README.md
geode/crypto/src/: aes128.rs  enclave.rs  lib.rs  remote_attestation.rs  secp256k1.rs  secp256r1.rs  sr25519.rs  test.rs
geode/macros/: Cargo.toml
geode/macros/src/: lib.rs
geode/sgx-ra/: Cargo.toml  README.md
geode/sgx-ra/src/: ias.rs  lib.rs
geode/types/: Cargo.toml  README.md
geode/types/src/: aes128.rs  common.rs  eip712.rs  error.rs  lib.rs  remote_attestation.rs  rsa3072.rs  secp256k1.rs  secp256r1.rs  sr25519.rs  utils.rs  witness.rs
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/src/: chain_spec.rs  command.rs  executor.rs  service.rs
node/pallets/fulfillment/: Cargo.toml
node/pallets/fulfillment/src/: lib.rs  mock.rs  property.rs  slash.rs  tests.rs
node/pallets/marketplace/: Cargo.toml
node/pallets/marketplace/src/: lib.rs  mock.rs  tests.rs
node/pallets/stake/: Cargo.toml
node/pallets/stake/src/: lib.rs  mock.rs  offline.rs  tests.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: fulfillment.rs  lib.rs
node/runtime/: Cargo.toml
node/runtime/src/: apis.rs  constants.rs  lib.rs
node/src/: chain_spec.rs  command.rs  lib.rs  rpc.rs  service.rs
node/test-runtime/cli/: Cargo.toml
node/test-runtime/cli/src/: chain_spec.rs  cli.rs  command.rs  executor.rs  lib.rs  service.rs
node/test-runtime/rpc/: Cargo.toml
node/test-runtime/rpc/src/: lib.rs
node/test-runtime/runtime/: Cargo.toml
node/test-runtime/runtime/src/: impls.rs  lib.rs
pallets/accounting/: Cargo.toml
pallets/accounting/src/: lib.rs  mock.rs  tests.rs
pallets/attestation/: Cargo.toml
pallets/attestation/src/: lib.rs  mock.rs  tests.rs
pallets/attestor/: Cargo.toml
pallets/attestor/src/: lib.rs  mock.rs  tests.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs
pallets/bridgetransfer/: Cargo.toml
pallets/bridgetransfer/src/: lib.rs
pallets/fulfillment/: Cargo.toml
pallets/fulfillment/src/: lib.rs  mock.rs  slash.rs  tests.rs
pallets/geode/: Cargo.toml
pallets/geode/src/: lib.rs  mock.rs  tests.rs
pallets/liveness/: Cargo.toml
pallets/liveness/src/: lib.rs  mock.rs  tests.rs
pallets/service/: Cargo.toml  README.md
pallets/service/src/: lib.rs
pallets/stake/: Cargo.toml
pallets/stake/src/: lib.rs  mock.rs  offline.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
pallets/transfer/: Cargo.toml
pallets/transfer/src/: lib.rs  mock.rs  test.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: attestor.rs  daoportal.rs  geode.rs  gmetadata.rs  lib.rs  transfer.rs
runtime/: Cargo.toml
runtime/automata/: Cargo.toml
runtime/automata/src/: apis.rs  constants.rs  lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: impls.rs  lib.rs
runtime/contextfree/: Cargo.toml
runtime/contextfree/src/: apis.rs  constants.rs  lib.rs
runtime/finitestate/: Cargo.toml
runtime/finitestate/src/: apis.rs  constants.rs  lib.rs
runtime/src/: apis.rs  constants.rs  lib.rs
runtime/traits/: Cargo.toml
runtime/traits/src/: lib.rs
scripts/: build-only-wasm.sh  complete-build.sh  docker-build.sh  docker_run.sh  init.sh  initial-account.sh  local-test.sh  run-network.sh  run-node.sh  setup-wasm.sh
scripts/docker/: Dockerfile
