[workspace]
members = [
    'node',
    'runtime/automata',
    'runtime/contextfree',
    'primitives'
]
[profile.release]
panic = 'unwind'
[patch."https://github.com/paritytech/substrate.git"]
frame-benchmarking = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-benchmarking-cli = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-election-provider-support = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-executive = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-metadata = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-support = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10", default-features = false}
frame-support-procedural = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-support-procedural-tools = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-support-procedural-tools-derive = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-system = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10", default-features = false}
frame-system-benchmarking = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
frame-system-rpc-runtime-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-api-proc-macro = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-application-crypto = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-arithmetic = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-authority-discovery = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-authorship = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-block-builder = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-blockchain = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-consensus = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-consensus-aura = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-consensus-babe = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-consensus-slots = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-consensus-vrf = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-core = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-database = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-debug-derive = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-externalities = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-finality-grandpa = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-inherents = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-io = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-keyring = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-keystore = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-maybe-compressed-blob = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-npos-elections = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-npos-elections-solution-type = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-offchain = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-panic-handler = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-rpc = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-runtime = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-runtime-interface = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-runtime-interface-proc-macro = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-serializer = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-session = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-staking = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-state-machine = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-std = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-storage = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-tasks = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-timestamp = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-tracing = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-transaction-pool = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-transaction-storage-proof = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-trie = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-version = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-version-proc-macro = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sp-wasm-interface = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-allocator = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-authority-discovery = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-basic-authorship = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-block-builder = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-chain-spec = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-chain-spec-derive = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-cli = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-client-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-client-db = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus-babe = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus-babe-rpc = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus-epochs = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus-slots = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-consensus-uncles = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-executor = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-executor-common = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-executor-wasmi = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-executor-wasmtime = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-finality-grandpa = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-finality-grandpa-rpc = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-informant = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-keystore = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-light = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-network = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-network-gossip = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-offchain = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-peerset = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-proposer-metrics = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-rpc = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-rpc-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-rpc-server = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-service = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-state-db = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-telemetry = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-tracing = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-tracing-proc-macro = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-transaction-pool = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
sc-transaction-pool-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-authority-discovery = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-authorship = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-babe = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-balances = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-collective = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-democracy = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-election-provider-multi-phase = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-elections-phragmen = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-grandpa = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-im-online = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-indices = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-membership = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-offences = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-randomness-collective-flip = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-scheduler = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-session = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-staking = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-staking-reward-curve = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-sudo = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-timestamp = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-transaction-payment = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-transaction-payment-rpc = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-treasury = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-utility = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}
pallet-vesting = {git = "https://github.com/automata-network/substrate.git", branch = "polkadot-v0.9.10"}