[package]
authors = ["Automata Team"]
build = 'build.rs'
edition = '2018'
homepage = 'https://www.ata.network/'
license = 'Apache-2.0'
name = 'automata'
repository = "https://github.com/automata-network/automata"
version = '0.1.0'

[[bin]]
name = 'automata'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = { version = '0.3.1' }
serde = { version = "1.0.119", features = ["derive"] }
jsonrpc-pubsub = "15.1.0"
futures = { version = "0.3.9", features = ["compat"] }

# Substrate dependencies
frame-benchmarking = '3.1.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-babe = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = '3.0.0'
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'
sc-network = '0.9.0'
sc-chain-spec = '3.0.0'

# local dependencies
automata-runtime = { path = '../runtime' }
automata-primitives = { path = "../primitives" }
automata-rpc = { path = "../rpc" }

pallet-evm = { default-features = false, version = '3.0.0'}
pallet-ethereum = { default-features = false, version = '1.0.0'}
fc-rpc = { default-features = false, version = '1.0.0'}
fp-rpc = { default-features = false, version = '1.0.0'}
fc-consensus = { default-features = false, version = '1.0.0'}
fp-consensus = { default-features = false, version = '1.0.0'}
fc-rpc-core = { default-features = false, version = '1.0.0'}
fc-db = { default-features = false, version = '1.0.0'}
fc-mapping-sync = { default-features = false, version = '1.0.0'}
pallet-indices = { default-features = false, version = '3.0.0' }

[features]
default = []
runtime-benchmarks = ['automata-runtime/runtime-benchmarks']
