[package]
name = "automata-rpc"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_json = { version = "1" }
serde = { version = "1.0.119", features = ["derive"] }
jsonrpc-core = '15.1.0'
jsonrpc-derive = '15.0.0'
jsonrpc-core-client = "15.0.0"
sp-api = '3.0.0'
sp-blockchain = '3.0.0'
sp-block-builder = '3.0.0'
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sp-transaction-pool = '3.0.0'
sc-network = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
jsonrpc-pubsub = "15.1.0"
sc-rpc = '3.0.0'
sc-client-api = '3.0.0'
sp-runtime = '3.0.0'
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
substrate-frame-rpc-system = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-light = '3.0.0'
hex = '0.4.3'
sp-std = '3.0.0'
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }
sp-core = { features = ["full_crypto"], git = 'https://github.com/paritytech/substrate.git', rev='4d28ebeb8b027ca0227fe7779c5beb70a7b56467' }

# local dependencies
automata-primitives = { path = "../primitives" }
automata-runtime = { path = '../runtime/automata', optional = true }
contextfree-runtime = { path = '../runtime/contextfree', optional = true }
pallet-geode = { path = "../pallets/geode" }
pallet-transfer = { path = "../pallets/transfer" }

fc-rpc = { default-features = false, version = '1.0.0'}
fc-rpc-core = { default-features = false, version = '1.0.0'}
fc-db = { default-features = false, version = '1.0.0'}
fp-rpc = { default-features = false, version = '1.0.0'}
pallet-ethereum = { default-features = false, version = '1.0.0'}

[features]
default = ["contextfree-runtime"]
automata = ["automata-runtime"]
contextfree = ["contextfree-runtime"]