[package]
name = "automata-rpc"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_json = { version = "1" }
serde = { version = "1.0.119", features = ["derive"] }
jsonrpc-core = '15.1.0'
jsonrpc-derive = '15.0.0'
jsonrpc-core-client = "15.0.0"
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
jsonrpc-pubsub = "15.1.0"
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-light = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
hex = '0.4.3'
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-core = { features = ["full_crypto"], git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

# local dependencies
automata-primitives = { path = "../primitives" }
automata-runtime = { path = '../runtime/automata', optional = true }
contextfree-runtime = { path = '../runtime/contextfree', optional = true }
pallet-geode = { path = "../pallets/geode" }
pallet-transfer = { path = "../pallets/transfer" }

fc-rpc = { default-features = false, git = 'https://github.com/paritytech/frontier', branch='master'}
fc-rpc-core = { default-features = false, git = 'https://github.com/paritytech/frontier', branch='master'}
fc-db = { default-features = false, git = 'https://github.com/paritytech/frontier', branch='master'}
fp-rpc = { default-features = false, git = 'https://github.com/paritytech/frontier', branch='master'}
pallet-ethereum = { default-features = false, git = 'https://github.com/paritytech/frontier', branch='master'}

[features]
default = ["contextfree-runtime"]
automata = ["automata-runtime"]
contextfree = ["contextfree-runtime"]