[package]
name = "geode-builder"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
home = "0.5.3"
cc = "1.0.66"
openssl = "0.10"
